--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,49 @@
   </head>
 
   <body>
+    <header>
+      <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
+        <div class="container">
+          <%= link_to root_path, class: "navbar-brand" do %>
+            <%= image_tag "logo.png", :style => "max-width: 20%" %>
+          <% end %>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="d-flex flex-wrap">
+            <div class="collapse navbar-collapse" id="navbarNavDropdown">
+              <ul class="navbar-nav ml-auto">
+              <% if admin_signed_in? %>
+                <li><%= link_to "県名", about_path, class: "nav-link text-light btn btn-outline-dark" %></li>
+                <li><%=  link_to "ミヤゲ一覧", users_path, class: "nav-link text-light btn btn-outline-dark ml-2" %></li>
+                <li><%=  link_to "ユーザー一覧", root_path ,class: "nav-link text-light btn btn-outline-dark ml-2" %></li>
+                <li><%= link_to "ログアウト", destroy_user_session_path, method: :delete, class: "nav-link text-light btn btn-outline-dark ml-2" %></li>
+              <% elsif user_signed_in? %>
+                <li><%= link_to "アバウト", about_path, class: "nav-link text-dark btn btn-outline-success" %></li>
+                <li><%=  link_to "ミヤゲ一覧", users_path, class: "nav-link text-dark btn btn-outline-success ml-2" %></li>
+                <li><%=  link_to "マイページ", root_path ,class: "nav-link text-dark btn btn-outline-success ml-2" %></li>
+                <li><%= link_to "ログアウト", destroy_user_session_path, method: :delete, class: "nav-link text-dark btn btn-outline-success ml-2" %></li>
+              <% else %>
+                <li><%= link_to "アバウト", about_path, class: "nav-link text-dark btn btn-outline-info" %></li>
+                <li><%= link_to "ミヤゲ一覧", about_path, class: "nav-link text-dark btn btn-outline-info ml-2" %></li>
+                <li><%= link_to "新規登録", root_path, class: "nav-link text-dark btn btn-outline-info ml-2" %></li>
+                <li><%= link_to "ログイン", new_user_session_path , class: "nav-link text-dark btn btn-outline-info ml-2" %></li>
+              <% end %>
+              </ul>
+            </div>
+            <div class="form-group mt-2 ml-auto">
+              <%= form_with url:root_path, method: :get, local: :true do |f| %>
+                <%= f.text_field :word, placeholder: "ミヤゲ名を入力" %>
+                <%= f.submit "検索", class: "btn btn-light" %>
+              <% end %>
+            </div>
+          </div>
+        </div>
+      </nav>
+    </header>
     <%= yield %>
+    <footer class="text-center border-top border-dark m-5">
+      Copyright ©ミヤゲ屋  All Rights Reserved.
+    </footer>
   </body>
 </html>
