--- a/app/views/public/homes/about.html.erb
+++ b/app/views/public/homes/about.html.erb
@@ -6,25 +6,24 @@
 
     <div class="col-8 offset-1 mt-5">
       <%= image_tag "草津.png", :style => "width: 100%"%>
-      <h2 class="text-center mt-5">ミヤゲ屋の使い方</h2>
-      <h4>①ミヤゲ（おみやげ）を探す！</h4>
-      <p>県別・一覧より調べたいミヤゲを検索</p>
-      <p>ヘッダーの検索窓からも検索できるよ！</p>
-      <p>目的別でも調べられるよ</p>
-      <h4>②レビューを書こう！</h4>
-      <p>該当のミヤゲが見つかったら、レビューを書こう</p>
-      <h4>③気になるミヤゲをチェック！</h4>
-      <p>気になるミヤゲがあったら、ほしい！に追加しよう！</p>
-
-      <div classs="text-center">
+      <div class="text-center", style="font-family: 'RocknRoll One', sans-serif;">
+        <h1 class="m-5">ミヤゲ屋の使い方</h1>
+        <h3>①ミヤゲ（おみやげ）を探す！</h3>
+        <p>県別・一覧より調べたいミヤゲを検索</p>
+        <p>ヘッダーの検索窓からも検索できるよ！</p>
+        <p>目的別でも調べられるよ</p>
+        <h3>②レビューを書こう！</h3>
+        <p>該当のミヤゲが見つかったら、レビューを書こう</p>
+        <h3>③気になるミヤゲをチェック！</h3>
+        <p>気になるミヤゲがあったら、ほしい！に追加しよう！</p>
+      </div>
+      <div class="text-center mt-5", style="font-family: 'RocknRoll One', sans-serif;">
         <p>※サイト内の閲覧は会員登録せず自由にご覧になれます。</p>
         <p>レビューの投稿・ほしい！の追加は<br>
           会員登録していただかないとご利用になれません。</p>
         <p>※不適切な投稿があった場合には、<br>
           管理者側で投稿を削除させていただく場合がございます。</p>
       </div>
-
-
     </div>
   </div>
 </div>
