--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -7,11 +7,11 @@
     <div class="col-8 offset-1 pt-5">
       <div class="row card">
         <%= image_tag "top.jpg", class: "card-img" %>
-        <div class="card-img-overlay", style="color: white;">
-          <div class="text-center", style="background-color: rgba(0,0,0,0.45);">
+        <div class="card-img-overlay d-flex align-center", style="color: white;">
+          <div class="text-center mx-auto my-auto p-5", style="background-color: rgba(0,0,0,0.7); font-family: 'RocknRoll One', sans-serif;">
             <h1>ミヤゲ屋へようこそ！</h1>
-            <p>おみやげのレビューをチェックしておみやげを買いに行こう！</p>
-            <p>おみやげを買ったら、レビューしてね！</p>
+            <p>おみやげのレビューをチェックしておみやげを買いに行こう！<br>
+               おみやげを買ったら、レビューしてね！</p>
           </div>
         </div>
       </div>
