--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -10,8 +10,12 @@
     <div class="col-5 offset-2 pt-3">
       <h2 class="mb-4 text-center font-weight-bold border-bottom">新規登録</h2>
       <%= form_with model: @user, url: user_registration_path do |f| %>
-        <%= render "public/shared/error_messages", resource: resource %>
-
+        <div class="m-5">
+          <% flash.each do |message_type, message| %>
+            <%= content_tag :div, message, class: message_type %>
+          <% end %>
+          <%= render "public/shared/error_messages", resource: resource %>
+        </div>
         <div class="mb-2">
           <%= f.label :名前 %><br />
           <%= f.text_field :name, autofocus: true, placeholder: "群馬太郎", class: "form-control" %>
