--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -60,9 +60,18 @@
         </div>
       </nav>
     </header>
-    
+    <!--フラッシュメッセージ用記述-->
+    <div class="text-center">
+      <% flash.each do |key, value| %>
+      <div class="alert alert-<%= key == 'notice' ? 'success' : 'danger' %>">
+        <%= value %>
+      </div>
+      <% end %>
+    </div>
+    <!--ここまで-->
+
     <%= yield %>
-    
+
     <footer class="text-center border-top border-dark m-5">
       Copyright ©ミヤゲ屋  All Rights Reserved.
     </footer>
