--- a/app/views/public/users/edit.html.erb
+++ b/app/views/public/users/edit.html.erb
@@ -10,7 +10,7 @@
         <%= link_to "戻る", user_path, class: "btn btn-outline-secondary" %>
       </div>
       <%= form_with model: @user, url: user_update_path do |f| %>
-      <table class="table">
+      <table class="table m-3">
         <tbody>
           <tr>
             <th class="text-center align-middle">名前</th>
