--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,2 +1,38 @@
-<h1>Admin::Users#index</h1>
-<p>Find me in app/views/admin/users/index.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col-10 mx-auto">
+      <h2 class="text-center m-3">ユーザー 一覧</h2>
+      <div class="text-right">
+         <%= link_to "戻る", admin_root_path, class: "btn btn-outline-secondary" %>
+      </div>
+
+      <table class="table table-border text-center m-3">
+        <thead>
+          <tr>
+            <th>ユーザーID</th>
+            <th>表示名（ユーザー名）</th>
+            <th>メールアドレス</th>
+            <th>ステータス</th>
+            <th></th>
+          </tr>
+        </thead>
+        <% @users.each do |user| %>
+        <tbody>
+          <tr>
+            <td class="align-middle"><%= user.id %></td>
+            <td class="align-middle"><%= user.nickname %></td>
+            <td class="align-middle"><%= user.email %></td>
+            <td class="align-middle"><% if user.is_deleted? %>
+						                           <span class="text-active">退会済み</span>
+				                             <% else %>
+						                           <span class="text-invalid">有効</span>
+					                           <% end %>
+					                           </td>
+            <td class="text-center"><%= link_to "詳細", admin_user_path(user), class: "btn btn-outline-info" %></td>
+          </tr>
+        </tbody>
+        <% end %>
+      </table>
+    </div>
+  </div>
+</div>
