--- a/app/views/public/reviews/show.html.erb
+++ b/app/views/public/reviews/show.html.erb
@@ -1,2 +1,31 @@
-<h1>Public::Reviews#show</h1>
-<p>Find me in app/views/public/reviews/show.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col-3">
+
+    </div>
+
+    <div class="col-8 offset-1 pt-5">
+       <h2 class="text-center">の詳細</h2>
+      <div class="text-center m-3">
+        <%= link_to "編集する",  edit_souvenir_review_path, class: "btn btn-outline-success mr-5" %>
+        
+        <%= link_to "戻る", souvenirs_path, class: "btn btn-outline-secondary" %>
+      </div>
+      <div class="row mt-5">
+        <div class="col-4">
+          
+        </div>
+        <div class="col-8">
+          <table class="table table-border">
+            <tbody>
+              <tr>
+
+
+
+
+
+
+
+    </div>
+  </div>
+</div>
