--- a/app/views/public/reviews/edit.html.erb
+++ b/app/views/public/reviews/edit.html.erb
@@ -1,2 +1,23 @@
-<h1>Public::Reviews#edit</h1>
-<p>Find me in app/views/public/reviews/edit.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col-3">
+
+    </div>
+
+    <div class="col-8 offset-1 pt-5">
+      <h2 class="m-3">レビュー編集画面</h2>
+      <div class="text-right">
+        <%= link_to "戻る", souvenir_path, class: "btn btn-outline-secondary" %>
+      </div>
+      <%= form_with model: @review, url: souvenir_reviews_path do |f| %>
+
+      <%= render "form" %>
+
+      <div class="my-3 text-center">
+        <%= f.submit "投稿する", class: "btn btn-success" %>
+      </div>
+      <% end %>
+
+    </div>
+  </div>
+</div>
