--- a/app/views/public/reviews/edit.html.erb
+++ b/app/views/public/reviews/edit.html.erb
@@ -5,12 +5,11 @@
     </div>
 
     <div class="col-8 offset-1 pt-5">
-      <h2 class="m-3"><%= @souvenir.souvenir_name %>　のレビュー編集画面</h2>
+      <h2 class="m-3"><%= @souvenir.souvenir_name %> のレビュー編集画面</h2>
       <div class="text-right">
         <%= link_to "戻る", souvenir_review_path(@souvenir, @review), class: "btn btn-outline-secondary" %>
       </div>
-
-
+      
       <%= form_with model: @review, url: souvenir_review_path, method: :patch do |f| %>
       <table class="table m-3">
         <tbody>
@@ -55,19 +54,19 @@
             <td>⭐️⭐️⭐️⭐️⭐️</td>
             <td></td>
           </tr>
+          <tr>
+            <th></th>
+            <td class="text-center"><%= f.submit "更新する", class: "btn btn-success" %></td>
+            <td class="text-right">
+              <% if @review.user == current_user %>
+                <%= link_to "削除する", souvenir_review_path, class: "btn btn-outline-danger", method: :delete, "data-confirm" => "このレビューを削除しますか？" %>
+              <% end %>
+            </td>
+          </tr>
         </tbody>
       </table>
-      <div class="my-3 text-center">
-        <%= f.submit "更新する", class: "btn btn-success" %>
-      </div>
       <% end %>
-
-
-
-
-
-
-
+      
     </div>
   </div>
 </div>
