--- a/app/views/public/users/review.html.erb
+++ b/app/views/public/users/review.html.erb
@@ -1,2 +1,26 @@
-<h1>Public::Users#review</h1>
-<p>Find me in app/views/public/users/review.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col-3">
+
+    </div>
+
+    <div class="col-8 offset-1 pt-5">
+      <h2 class="mb-5"><%= current_user.nickname %>のレビュー一覧</h2>
+      <div class="row">
+        <% @user.reviews.each do |review| %>
+        <div class="card-deck col-4 mx-auto mb-3">
+          <%= link_to souvenir_review_path(review.souvenir_id, review) do %>
+          <div class="card h-100 border-secondary btn btn-outline-primary", style="width:15rem;">
+            <%= image_tag review.souvenir.get_image, class: "card-img-top width='30%' height='50'" %>
+            <div class="card-body">
+              <h4 class="card-title"><%= review.souvenir.souvenir_name %></h4>
+              <p class="card-text"><%= review.review %></p>
+            </div>
+          </div>
+          <% end %>
+        </div>
+        <% end %>
+      </div>
+    </div>
+  </div>
+</div>
