--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -2,6 +2,9 @@
   <div class="row">
     <div class="col-3">
       <%= image_tag "logo.png", :style => "width: 100%" %>
+      <div class="row  m-5">
+        <%= link_to "ゲストログイン", user_guest_sign_in_path, class: "btn btn-outline-dark sign_in", method: :post %>
+      </div>
     </div>
 
     <div class="col-8 offset-1 pt-5">
