--- a/app/views/public/users/review.html.erb
+++ b/app/views/public/users/review.html.erb
@@ -5,7 +5,7 @@
     </div>
 
     <div class="col-8 offset-1 pt-5">
-      <h2 class="mb-5"><%= current_user.nickname %>のレビュー一覧</h2>
+      <h2 class="mb-5"><%= current_user.nickname %>さんのレビュー一覧</h2>
       <div class="row">
         <% @user.reviews.each do |review| %>
         <div class="card-deck col-4 mx-auto mb-3">
