--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -30,7 +30,9 @@
     </div>
 
     <div class="col-3 pt-5">
-      <%= link_to "編集する", user_edit_path, class: "btn btn-outline-success mt-4 mb-5" %>
+      <% unless @user.guest_user? %>
+        <%= link_to "編集する", user_edit_path, class: "btn btn-outline-success mt-4 mb-5" %>
+      <% end %>
       <%= link_to "自分のレビュー一覧", user_review_path, class: "btn btn-outline-primary mb-5" %>
       <%= link_to "自分のほしい！一覧", user_want_path, class: "btn btn-outline-warning mb-5" %>
     </div>
