[Add]Admin側ほしい機能

--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -21,7 +21,7 @@
             <td></td>
           </tr>
           <tr>
-            <td class="text-center"><%= link_to "ほしい！一覧", class: "btn btn-outline-warning" %></td>
+            <td class="text-center"><%= link_to "ほしい！一覧", wants_admin_souvenirs_path, class: "btn btn-outline-warning" %></td>
             <td></td>
           </tr>
         </tbody>
