--- a/app/views/admin/wants/index.html.erb
+++ b/app/views/admin/wants/index.html.erb
@@ -1,2 +1,31 @@
-<h1>Admin::Wants#index</h1>
-<p>Find me in app/views/admin/wants/index.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col-10 mx-auto">
+      <h2 class="text-center m-3">ほしい！一覧</h2>
+      <div class="text-right">
+         <%= link_to "戻る", admin_root_path, class: "btn btn-outline-secondary" %>
+      </div>
+
+      <table class="table table-border text-center m-3">
+        <thead>
+          <tr>
+            <th>ほしい！した日時</th>
+            <th>ミヤゲ名</th>
+            <th>表示名（ユーザー名）</th>
+            <th></th>
+          </tr>
+        </thead>
+        <% @want.each do |want| %>
+        <tbody>
+          <tr>
+            <td class="align-middle"><%= want.created_at.to_s(:datetime_jp) %></td>
+            <td class="align-middle"><%= want.souvenir.souvenir_name %></td>
+            <td class="align-middle"><%= want.user.nickname %></td>
+            <td class="align-middle"><%= link_to "削除", admin_souvenir_wants_path(want.souvenir), method: :delete, class: "btn btn-outline-danger" %></td>
+          </tr>
+        </tbody>
+        <% end %>
+      </table>
+    </div>
+  </div>
+</div>
