--- a/app/views/public/users/want.html.erb
+++ b/app/views/public/users/want.html.erb
@@ -9,7 +9,7 @@
       <div class="row">
         <% @user.wants.each do |want| %>
         <div class="card-deck col-4 mx-auto mb-3">
-          <%= link_to souvenir_wants_path(want.souvenir_id) do %>
+          <%= link_to souvenir_path(want.souvenir_id) do %>
           <div class="card h-100 border-secondary btn btn-outline-warning", style="width:15rem;">
             <%= image_tag want.souvenir.get_image, class: "card-img-top width='30%' height='50'" %>
             <div class="card-body">
