[Add]admin側レビュー機能

--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -17,7 +17,7 @@
             <td class="text-center align-middle">登録県数&emsp;<%= @prefecture.count %>　都道府県</td>
           </tr>
           <tr>
-            <td class="text-center"><%= link_to "レビュー一覧", class: "btn btn-outline-info" %></td>
+            <td class="text-center"><%= link_to "レビュー一覧", reviews_admin_souvenirs_path, class: "btn btn-outline-info" %></td>
             <td></td>
           </tr>
           <tr>
