--- a/app/views/admin/reviews/index.html.erb
+++ b/app/views/admin/reviews/index.html.erb
@@ -1,2 +1,36 @@
-<h1>Admin::Reviews#index</h1>
-<p>Find me in app/views/admin/reviews/index.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col-12 mx-auto">
+      <h2 class="text-center m-3">レビュー一覧</h2>
+      <div class="text-right">
+         <%= link_to "戻る", admin_root_path, class: "btn btn-outline-secondary" %>
+      </div>
+
+      <table class="table table-border text-center m-3">
+        <thead>
+          <tr>
+            <th>レビューした日時</th>
+            <th>ミヤゲ名</th>
+            <th>表示名（ユーザー名）</th>
+            <th>レビュー</th>
+            <th></th>
+            <th></th>
+          </tr>
+        </thead>
+        <% @review.each do |review| %>
+        <tbody>
+          <tr>
+            <td class="align-middle"><%= review.created_at.to_s(:datetime_jp) %></td>
+            <td class="align-middle"><%= review.souvenir.souvenir_name %></td>
+            <td class="align-middle"><%= review.user.nickname %></td>
+            <td class="align-middle"><%= review.review.truncate(10) %></td>
+            <!------------------------".truncate(10)" は、文字列を10文字だけ表示する------------------>
+            <td class="align-middle"><%= link_to "詳細", admin_souvenir_review_path(review.souvenir, review), class: "btn btn-outline-info" %></td>
+            <td class="align-middle"><%= link_to "削除", admin_souvenir_review_path(review.souvenir, review), "data-confirm" => "削除してもよろしいですか？", method: :delete, class: "btn btn-outline-danger" %></td>
+          </tr>
+        </tbody>
+        <% end %>
+      </table>
+    </div>
+  </div>
+</div>
