--- a/app/views/admin/reviews/index.html.erb
+++ b/app/views/admin/reviews/index.html.erb
@@ -11,7 +11,7 @@
           <tr>
             <th>レビューした日時</th>
             <th>ミヤゲ名</th>
-            <th>表示名（ユーザー名）</th>
+            <th>ユーザー名</th>
             <th>レビュー</th>
             <th></th>
             <th></th>
