--- a/app/views/admin/wants/index.html.erb
+++ b/app/views/admin/wants/index.html.erb
@@ -3,7 +3,7 @@
     <div class="col-10 mx-auto">
       <h2 class="text-center m-3">ほしい！一覧</h2>
       <div class="text-right">
-         <%= link_to "戻る", request.referer, class: "btn btn-outline-secondary" %>
+         <%= link_to "戻る", admin_root_path, class: "btn btn-outline-secondary" %>
       </div>
 
       <table class="table table-border text-center m-3">
